SFDCProject/src/objects/FS_Action_Code__c.object
<CustomObject>
    <description>List of valid FS Action Codes and the Fields that are required when using the code in an FS Action record.</description>
    <fields>
        <fullName>FS_Act_Code_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator to show that the Action Code is Active</description>
        <inlineHelpText>Check if you want users to be able to select this Action Code when adding or editing FS Action records</inlineHelpText>
        <label>FS Act Code Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Act_Code_Desc__c</fullName>
        <description>Short description of the FS Action Code</description>
        <inlineHelpText>Enter a short description for the FS Action Code</inlineHelpText>
        <label>FS Act Code Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Get_Dollars_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show that the Hours information should be collected.</description>
        <inlineHelpText>Check if you want the user to provide dollar amount information when using this code</inlineHelpText>
        <label>FS Get Dollars Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Hours_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show that the Hours information should be collected.</description>
        <inlineHelpText>Check if you want the user to provide hours information when using this code</inlineHelpText>
        <label>FS Get Hours Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_New_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show that the set of fields for the new component should be collected</description>
        <inlineHelpText>Check if you want the user to provide information about the replacement or newly installed component</inlineHelpText>
        <label>FS Get New Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Old_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show that the set of fields for the old/existing/removed component should be collected</description>
        <inlineHelpText>Check if you want the user to provide information about the existing or removed component</inlineHelpText>
        <label>FS Get Old Info</label>
        <type>Checkbox</type>
    </fields>
    <label>FS Action Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FS_Act_Code_Desc__c</columns>
        <columns>FS_Act_Code_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FS Action Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Action Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>